--- a/index.html
+++ b/index.html
@@ -19,13 +19,21 @@
         </div>
     </header>
     <main>
-        <h2>Build Your Own City!</h2>
-        <select id = "location-select">
-            <option value="Forest"></option>
-            <option value="Field"></option>
-            <option value="Lava"></option>
-        </select>
-                    
+        <h2>Build Your Own City in Shrek!</h2>
+        <section id = "location-section">
+            <select id = "location-select">
+                <option value="Forest"></option>
+                <option value="Field"></option>
+                <option value="Lava"></option>
+            </select>
+        </section>  
+        <section id = "architecture-section">
+            <select id = "architecture-select">
+                <option value="Hut"></option>
+                <option value="Castle"></option>
+                <option value="Dragons-keep"></option>
+            </select>
+        </section>          
         
     </main>
     <footer>
