trying to get images to appear

--- a/index.html
+++ b/index.html
@@ -21,18 +21,22 @@
     <main>
         <h2>Build Your Own City in Shrek!</h2>
         <section id = "location-section">
+            Location
             <select id = "location-select">
-                <option value="Forest"></option>
-                <option value="Field"></option>
-                <option value="Lava"></option>
+                <option value="forest">Forest</option>
+                <option value="field">Field</option>
+                <option value="lava">Lava</option>
             </select>
+            <div class ="bg" id = "location"></div>
         </section>  
+        Architecture
         <section id = "architecture-section">
             <select id = "architecture-select">
-                <option value="Hut"></option>
-                <option value="Castle"></option>
-                <option value="Dragons-keep"></option>
+                <option value="hut">Hut</option>
+                <option value="castle">Castle</option>
+                <option value="dragons-keep">Dragons Keep</option>
             </select>
+            <div class = "bg" id ="architecture"></div>
         </section>          
         
     </main>
