--- a/index.html
+++ b/index.html
@@ -20,28 +20,30 @@
     </header>
     <main>
         <h2>Build Your Own City in Shrek!</h2>
+        <div class = "pictures">
         <section id = "location-section">
             Location
             <select id = "location-select">
-                <option value="forest">Forest</option>
-                <option value="field">Field</option>
-                <option value="lava">Lava</option>
+                <option value="Forest">Forest</option>
+                <option value="Field">Field</option>
+                <option value="Lava">Lava</option>
             </select>
-            <div class ="bg" id = "location"></div>
+            <div class ="bg location" id = "location"></div>
         </section>  
-        Architecture
         <section id = "architecture-section">
+            Architecture
             <select id = "architecture-select">
                 <option value="hut">Hut</option>
                 <option value="castle">Castle</option>
                 <option value="dragons-keep">Dragons Keep</option>
             </select>
-            <div class = "bg" id ="architecture"></div>
-        </section>          
+            <div class = "bg architecture" id ="architecture"></div>
         
+        </section>          
+    </div>
     </main>
     <footer>
-        <div class="copy gutter-right">&copy; 2021 Alchemy Code Lab</div>
+        <div class="copy gutter-right">&copy; 2022 Alchemy Code Lab</div>
     </footer>
 
     <script type="module" src="./app.js"></script>
