--- a/index.html
+++ b/index.html
@@ -38,8 +38,16 @@
                     <option value="dragons-keep">Dragons Keep</option>
                 </select>
                 <div class = "bg architecture" id ="architecture"></div>
-            
             </section>          
+        </div>
+            <section id = "slogan">
+                Add a slogan
+                <input id = "slogan-input">
+                <button id = "slogan-button">Add</button>
+            </section>
+        <div id = "stats">
+            <p id = "report"></p>
+            <ul id = "slogans"></ul>
         </div>
     </main>
     <footer>
