changing images for known

--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@
                     <option value="dragons-keep">Dragons Keep</option>
                 </select>
                 <div class = "bg architecture" id ="architecture"></div>
-            </section>  
+            </section> 
+            <section id = "known-section">
+                Known For
+                <select id = "known-select">
+                    <option value="Boulder">Nice Boulders</option>
+                    <option value="Waffles">Waffles</option>
+                    <option value="Backpacking">Backpacking</option>
+                </select>
+                <div class = "bg known" id = "known"></div>
+            </section> 
         </div>        
             <section>
                 Add a slogan
