--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>Build Your Own City in Shrek!</h2>
         <div class = "pictures">
             <section id = "location-section">
-                Location
+                <h3>Location</h3>
                 <select id = "location-select">
                     <option value="Forest">Forest</option>
                     <option value="Field">Field</option>
@@ -31,7 +31,7 @@
                 <div class ="bg location" id = "location"></div>
             </section>  
             <section id = "architecture-section">
-                Architecture
+                <h3>Architecture</h3>
                 <select id = "architecture-select">
                     <option value="hut">Hut</option>
                     <option value="castle">Castle</option>
@@ -40,7 +40,7 @@
                 <div class = "bg architecture" id ="architecture"></div>
             </section> 
             <section id = "known-section">
-                Known For
+                <h3>Known For</h3>
                 <select id = "known-select">
                     <option value="Boulder">Nice Boulders</option>
                     <option value="Waffles">Waffles</option>
@@ -50,13 +50,12 @@
             </section> 
         </div>        
             <section>
-                Add a slogan
+                <h3>Add a slogan</h3>
                 <input id = "slogan-input">
                 <button id = "slogan-button">Add</button>
                 <ul id="slogans"></ul>
         <div id="stats">
             <p id="report"></p>
-            
         </div>
             </section>
     </main>
