--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="gutter-right logo">
-            <img src="./assets/big-logo.png" />
+            <img src=""/>
         </div>
     </header>
     <main>
@@ -49,7 +49,7 @@
                 <div class = "bg known" id = "known"></div>
             </section> 
         </div>        
-            <section>
+            <label style="background-color: RGB(82, 50, 19);">
                 <h3>Add a slogan</h3>
                 <input id = "slogan-input">
                 <button id = "slogan-button">Add</button>
@@ -57,7 +57,7 @@
         <div id="stats">
             <p id="report"></p>
         </div>
-            </section>
+            </label>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2022 Alchemy Code Lab</div>
