--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class = "bg known" id = "known"></div>
             </section> 
         </div>        
-            <label style="background-color: RGB(82, 50, 19);">
+            <label>
                 <h3>Add a slogan</h3>
                 <input id = "slogan-input">
                 <button id = "slogan-button">Add</button>
