--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class = "bg known" id = "known"></div>
             </section> 
         </div>        
-            <label>
+            <section>
                 <h3>Add a slogan</h3>
                 <input id = "slogan-input">
                 <button id = "slogan-button">Add</button>
@@ -57,7 +57,7 @@
         <div id="stats">
             <p id="report"></p>
         </div>
-            </label>
+            </section>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2022 Alchemy Code Lab</div>
