--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <option value="Field">Field</option>
                     <option value="Lava">Lava</option>
                 </select>
-                <div class ="bg location" id = "location"></div>
+                <div id = "location"></div>
             </section>  
             <section id = "architecture-section">
                 <h3>Architecture</h3>
@@ -37,7 +37,7 @@
                     <option value="castle">Castle</option>
                     <option value="dragons-keep">Dragons Keep</option>
                 </select>
-                <div class = "bg architecture" id ="architecture"></div>
+                <div id ="architecture"></div>
             </section> 
             <section id = "known-section">
                 <h3>Known For</h3>
@@ -46,12 +46,12 @@
                     <option value="Waffles">Waffles</option>
                     <option value="Backpacking">Backpacking</option>
                 </select>
-                <div class = "bg known" id = "known"></div>
+                <div id = "known"></div>
             </section> 
         </div>        
             <section>
                 <h3>Add a slogan</h3>
-                <input id = "slogan-input">
+                <input id = "slogan-input"><br>
                 <button id = "slogan-button">Add</button>
                 <ul id="slogans"></ul>
         <div id="stats">
